--- a/day-10-/src/index.html
+++ b/day-10-/src/index.html
@@ -1,6 +1,14 @@
 <div class="controller">
-  <div class="controllerLeft"></div>
-  <div class="controllerRight"></div>
+  <div class="controllerLeft">
+    <div class="circleLeft"></div>
+  </div>
+  <div class="controllerRight">
+     <div class="circleRight"></div>
+      <div class="circleButton top"> </div>
+      <div class="circleButton bottom"> </div>
+      <div class="circleButton left"> </div>
+      <div class="circleButton right"> </div>
+  </div>
   
   <div class="center">
       <div class="touchpad"></div>
