--- a/day-22-i-am-feline-fine-image-reveal/src/index.html
+++ b/day-22-i-am-feline-fine-image-reveal/src/index.html
@@ -1,2 +1,4 @@
-<img src="https://github.com/Zekaeria/25-days-of-web-development/blob/main/day-22-/Cat2-by-zekaeria.png?raw=true" class="cat2" alt="cat2">
-<img src="https://github.com/Zekaeria/25-days-of-web-development/blob/main/day-22-/Cat1-by-zekaeria.png?raw=true" class="cat1" alt="cat1">
+<img src="https://github.com/Zekaeria/25-days-of-web-development/blob/main/day-22-i-am-feline-fine-image-reveal/Cat1-by-zekaeria.png?raw=true" class="cat1" id="cat1" alt="cat1">
+<div class="circle" id="circle"> 
+  <div class="static" id="static"> </div>
+</div>
