--- a/day-25-pulsing-hearts/src/index.html
+++ b/day-25-pulsing-hearts/src/index.html
@@ -1,1 +1,5 @@
-<div class="bat-symbol"></div>
+<div class="container">
+  <div class="heart"></div>
+  <div class="heart heart2"></div>
+  <div class="heart heart3"></div>
+</div>
